removed redundant estimator and added mis and added new ss

--- a/SimInfInference/DESCRIPTION
+++ b/SimInfInference/DESCRIPTION
@@ -30,4 +30,5 @@ Imports:
              ggplot2,
              zoo,
              Rcpp,
-             Weighted.Desc.Stat
+             Weighted.Desc.Stat,
+             emdbook
